--- a/CyberBuddyFrontend/app.json
+++ b/CyberBuddyFrontend/app.json
@@ -25,7 +25,8 @@
       "package": "com.raghu029.CyberBuddy"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
     "extra": {
       "eas": {
