--- a/CyberBuddyFrontend/package.json
+++ b/CyberBuddyFrontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
@@ -24,6 +25,7 @@
     "expo-status-bar": "~1.4.4",
     "native-notify": "^3.2.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-background-downloader": "^2.3.4",
     "react-native-fetch-blob": "^0.10.8",
@@ -32,10 +34,12 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1"
   },
   "private": true
 }
